--- a/test.html
+++ b/test.html
@@ -1,15 +1,20 @@
 <html>
 <head>
  <title>Skyrim Shuffle</title>
+ <meta charset="UTF-8">
 </head>
 <body>
 	<h1>
 		Skyrim Shuffle
 	</h1>
+	<!--
 	<input id="input" type="number" value="0" />
 	<button id="add">Add</button>
 	<button id="subtract">subtract</button>
 	<p id="output"></p>
+	-->
+	<ol id="list">
+	</o`l>
 
 	
 	<script src="./start.js"></script>
