Created some dropdown menus + bee fear 🐝

--- a/test.html
+++ b/test.html
@@ -2,6 +2,11 @@
 <head>
  <title>Skyrim Shuffle</title>
  <meta charset="UTF-8">
+ <script>
+	 function miwitawyOnchange(event) {
+		 alert(event.target.value.toUpperCase());
+	 }
+ </script>
 </head>
 <body>
 	<h1>
@@ -13,9 +18,9 @@
 	<button id="subtract">subtract</button>
 	<p id="output"></p>
 	-->
-	<ol id="list">
-	</o`l>
-
+	<ol id="Effects">
+	</ol>
+	
 	
 	<script src="./start.js"></script>
 </body>
